src/App.css
.app {
  margin-top: 40px;
  display: flex;
  flex-direction: column;
  align-items: center;
  animation-delay: 30s;
  -webkit-animation: fadeinflicker 6s; /* Safari, Chrome and Opera > 12.1 */
  -moz-animation: fadeinflicker 6s; /* Firefox < 16 */
  -ms-animation: fadeinflicker 6s; /* Internet Explorer */
  -o-animation: fadeinflicker 6s; /* Opera < 12.1 */
  animation: fadeinflicker 6s;
}

.game-header {
  margin-top: 45px;
  min-width: 380px;
  text-align: center;
  color: white;
  font-family: "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
  font-weight: bold;
  margin-bottom: 20px;
  font-size: 30px;
  text-shadow: 0px 0px 10px white;
  text-decoration: underline;
  -webkit-animation: fadein 15s; /* Safari, Chrome and Opera > 12.1 */
  -moz-animation: fadein 15s; /* Firefox < 16 */
  -ms-animation: fadein 15s; /* Internet Explorer */
  -o-animation: fadein 15s; /* Opera < 12.1 */
  animation: fadein 15s;
  
}

.author {
  margin-left: 190px;
  margin-top: -20px;
  text-align: center;
  color: white;
  font-family: "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
  font-weight: bold;
  font-size: 16px;
  text-shadow: 0px 0px 10px white;
  -webkit-animation: fadein 15s; /* Safari, Chrome and Opera > 12.1 */
  -moz-animation: fadein 15s; /* Firefox < 16 */
  -ms-animation: fadein 15s; /* Internet Explorer */
  -o-animation: fadein 15s; /* Opera < 12.1 */
  animation: fadein 15s;
}

.instructions-div {
  min-width: 550px;
}

.instructions {
  margin-top: 50px;
  font-size: 16px;
  text-align: center;
  color: white;
  font-family: "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
  font-weight: bold;
  text-shadow: 0px 0px 4px white;
  -webkit-animation: fadeinslow 20s; /* Safari, Chrome and Opera > 12.1 */
  -moz-animation: fadeinslow 20s; /* Firefox < 16 */
  -ms-animation: fadeinslow 20s; /* Internet Explorer */
  -o-animation: fadeinslow 20s; /* Opera < 12.1 */
  animation: fadeinslow 20s;
}

.instructions1 {
  font-size: 16px;
  text-align: right;
  color: white;
  text-align: center;
  font-family: "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
  font-weight: bold;
  text-shadow: 0px 0px 4px white;
  opacity: 0;
  -webkit-animation: fadeinslow 20s; /* Safari, Chrome and Opera > 12.1 */
  -webkit-animation-delay: 1s;
  -webkit-animation-fill-mode: forwards;
  -moz-animation: fadeinslow 20s; /* Firefox < 16 */
  -moz-animation-delay: 1s;
  -moz-animation-fill-mode: forwards;
  -ms-animation: fadeinslow 20s; /* Internet Explorer */
  -ms-animation-delay: 1s;
  -ms-animation-fill-mode: forwards;
  -o-animation: fadeinslow 20s; /* Opera < 12.1 */
  -o-animation-delay: 1s;
  -o-animation-fill-mode: forwards;
  animation: fadeinslow 20s;
  animation-delay: 1s;
  animation-fill-mode: forwards;
}

.instructions2 {
  font-size: 16px;
  text-align: right;
  color: white;
  text-align: center;
  font-family: "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
  font-weight: bold;
  text-shadow: 0px 0px 4px white;
  opacity: 0;
  -webkit-animation: fadeinslow 20s; /* Safari, Chrome and Opera > 12.1 */
  -webkit-animation-delay: 3s;
  -webkit-animation-fill-mode: forwards;
  -moz-animation: fadeinslow 20s; /* Firefox < 16 */
  -moz-animation-delay: 3s;
  -moz-animation-fill-mode: forwards;
  -ms-animation: fadeinslow 20s; /* Internet Explorer */
  -ms-animation-delay: 3s;
  -ms-animation-fill-mode: forwards;
  -o-animation: fadeinslow 20s; /* Opera < 12.1 */
  -o-animation-delay: 3s;
  -o-animation-fill-mode: forwards;
  animation: fadeinslow 20s;
  animation-delay: 3s;
  animation-fill-mode: forwards;
}

.instructions3 {
  font-size: 16px;
  text-align: right;
  color: white;
  text-align: center;
  font-family: "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
  font-weight: bold;
  text-shadow: 0px 0px 4px white;
  opacity: 0;
  -webkit-animation: fadeinslow 20s; /* Safari, Chrome and Opera > 12.1 */
  -webkit-animation-delay: 5s;
  -webkit-animation-fill-mode: forwards;
  -moz-animation: fadeinslow 20s; /* Firefox < 16 */
  -moz-animation-delay: 5s;
  -moz-animation-fill-mode: forwards;
  -ms-animation: fadeinslow 20s; /* Internet Explorer */
  -ms-animation-delay: 5s;
  -ms-animation-fill-mode: forwards;
  -o-animation: fadeinslow 20s; /* Opera < 12.1 */
  -o-animation-delay: 5s;
  -o-animation-fill-mode: forwards;
  animation: fadeinslow 20s;
  animation-delay: 5s;
  animation-fill-mode: forwards;
}

.whole-app {
  display: flex;
  flex-direction: column;
  min-width: 950px;
}

/* these are the instructions for the app */
@keyframes fadeinflicker {
  0% {
    opacity: .2
  }

  5% {
    opacity: .8
  }

  6% {
    opacity: .1
  }

  9% {
    opacity: .7
  }

  10% {
    opacity: .2
  }

  11% {
    opacity: .7
  }

  12% {
    opacity: .2
  }

  100% {
    opacity: 1
  }
}

/* Firefox < 16 */
@-moz-keyframes fadeinflicker {
  0% {
    opacity: .2
  }

  5% {
    opacity: .8
  }

  6% {
    opacity: .1
  }

  9% {
    opacity: .7
  }

  10% {
    opacity: .2
  }

  11% {
    opacity: .7
  }

  12% {
    opacity: .2
  }

  100% {
    opacity: 1
  }
}

/* Safari, Chrome and Opera > 12.1 */
@-webkit-keyframes fadeinflicker {
  0% {
    opacity: .2
  }

  5% {
    opacity: .8
  }

  6% {
    opacity: .1
  }

  9% {
    opacity: .7
  }

  10% {
    opacity: .2
  }

  11% {
    opacity: .7
  }

  12% {
    opacity: .2
  }

  100% {
    opacity: 1
  }
}

/* Internet Explorer */
@-ms-keyframes fadeinflicker {
  0% {
    opacity: .2
  }

  5% {
    opacity: .8
  }

  6% {
    opacity: .1
  }

  9% {
    opacity: .7
  }

  10% {
    opacity: .2
  }

  11% {
    opacity: .7
  }

  12% {
    opacity: .2
  }

  100% {
    opacity: 1
  }
}

/* Opera < 12.1 */
@-o-keyframes fadeinflicker {
  0% {
    opacity: .2
  }

  5% {
    opacity: .8
  }

  6% {
    opacity: .1
  }

  9% {
    opacity: .7
  }

  10% {
    opacity: .2
  }

  11% {
    opacity: .7
  }

  12% {
    opacity: .2
  }

  100% {
    opacity: 1
  }
}





/* These are the frames for the instructions on the bottom */
@keyframes fadeinslow {
  0% {
    opacity: 0
  }

  20% {
    opacity: 0
  }

  100% {
    opacity: 1
  }
}

/* Firefox < 16 */
@-moz-keyframes fadeinslow {
  0% {
    opacity: 0
  }

  20% {
    opacity: 0
  }

  100% {
    opacity: 1
  }
}

/* Safari, Chrome and Opera > 12.1 */
@-webkit-keyframes fadeinslow {
  0% {
    opacity: 0
  }

  20% {
    opacity: 0
  }

  100% {
    opacity: 1
  }
}

/* Internet Explorer */
@-ms-keyframes fadeinslow {
  0% {
    opacity: 0
  }

  20% {
    opacity: 0
  }

  100% {
    opacity: 1
  }
}

/* Opera < 12.1 */
@-o-keyframes fadeinslow {
  0% {
    opacity: 0
  }

  20% {
    opacity: 0
  }

  100% {
    opacity: 1
  }
}




/* for the header */
@keyframes fadein {
  0% {
    opacity: 0
  }

  15% {
    opacity: 0
  }

  100% {
    opacity: 1
  }
}

/* Firefox < 16 */
@-moz-keyframes fadein {
  0% {
    opacity: 0
  }

  15% {
    opacity: 0
  }

  100% {
    opacity: 1
  }
}

/* Safari, Chrome and Opera > 12.1 */
@-webkit-keyframes fadein {
  0% {
    opacity: 0
  }

  15% {
    opacity: 0
  }

  100% {
    opacity: 1
  }
}

/* Internet Explorer */
@-ms-keyframes fadein {
  0% {
    opacity: 0
  }

  15% {
    opacity: 0
  }

  100% {
    opacity: 1
  }
}

/* Opera < 12.1 */
@-o-keyframes fadein {
  0% {
    opacity: 0
  }

  15% {
    opacity: 0
  }

  100% {
    opacity: 1
  }
}

